# vozazi

./: .env.example  .gitignore  .lintstagedrc.json  README.md  REPOSITORY_STRUCTURE.md  TASK_TRACKER.md  commitlint.config.js  docker-compose.yml  eslint.config.js  package.json  turbo.json  vercel-mcp.json
.agent/skills/: README.md
.agent/skills/audio-engine/essentia/: SKILL.md
.agent/skills/audio-engine/fastapi/: SKILL.md
.agent/skills/audio-engine/librosa/: SKILL.md
.agent/skills/audio-engine/python-async/: SKILL.md
.agent/skills/audio-engine/torchaudio/: SKILL.md
.agent/skills/audio-engine/torchcrepe/: SKILL.md
.agent/skills/audio-engine/websockets/: SKILL.md
.agent/skills/backend/drizzle-orm/: SKILL.md
.agent/skills/frontend/nextjs-app-router/: SKILL.md
.agent/skills/frontend/nextjs-route-handlers/: SKILL.md
.agent/skills/frontend/nextjs-server-actions/: SKILL.md
.agent/skills/frontend/shadcn-ui/: SKILL.md
.agent/skills/frontend/tailwind-css/: SKILL.md
.agent/skills/frontend/typescript-system/: SKILL.md
.agent/skills/frontend/web-audio-api/: SKILL.md
.agent/skills/pedagogy/llm-integration/: SKILL.md
.agent/skills/pedagogy/rag-system/: SKILL.md
.agent/skills/pedagogy/vector-databases/: SKILL.md
.agent/skills/services/clerk-auth/: SKILL.md
.agent/skills/services/cloudflare-r2/: SKILL.md
.agent/skills/services/posthog-analytics/: SKILL.md
.agent/skills/services/resend-email/: SKILL.md
.agent/skills/services/stripe-billing/: SKILL.md
.github/workflows/: ci.yml
apps/audio-engine/: .env.example  Dockerfile  pyproject.toml  requirements.txt
apps/audio-engine/app/: __init__.py  config.py  main.py
apps/audio-engine/app/api/: __init__.py  audio.py  health.py  mcp.py  websocket.py
apps/audio-engine/app/mcp/: __init__.py  anthropic_client.py  database.py  manager.py  openai_client.py  redis_client.py  server.py  storage.py
apps/audio-engine/tests/: conftest.py  test_audio_processing.py  test_health.py  test_mcp_clients.py
apps/web/: .env.example  Dockerfile  i18next.config.ts  next.config.js  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vitest.config.ts
apps/web/e2e/: accessibility.spec.ts  example.spec.ts  home.spec.ts  ux-flows.spec.ts  visual-regression.spec.ts
apps/web/public/: index.html
apps/web/public/locales/es/: billing.json  common.json  dashboard.json  library.json  onboarding.json  practice.json  translation.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/api/health/: route.ts
apps/web/src/app/api/health/__tests__/: route.test.ts
apps/web/src/app/api/health/clerk/: route.ts
apps/web/src/app/api/health/stripe/: route.ts
apps/web/src/app/api/health/variables/: route.ts
apps/web/src/app/billing/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/history/: page.tsx
apps/web/src/app/onboarding/: page.tsx
apps/web/src/app/practice/: page.tsx
apps/web/src/app/settings/: page.tsx
apps/web/src/components/__tests__/: button.test.tsx
apps/web/src/components/layout/: AppLayout.tsx  Footer.tsx  Header.tsx  MainNavigation.tsx
apps/web/src/components/onboarding/: OnboardingFlow.tsx
apps/web/src/components/practice/: AudioPractice.tsx  ExerciseLogic.tsx  SessionReport.tsx
apps/web/src/components/shared/: LanguageSwitcher.tsx  Loading.tsx
apps/web/src/hooks/: useAudioRecorder.ts  useSessionState.ts  useTranslation.ts
apps/web/src/lib/: clerk-mcp.ts  i18n.config.ts  i18n.ts  stripe-mcp.ts  utils.ts
apps/web/src/lib/__tests__/: api-integration.test.ts  performance.test.ts  security.test.ts  utils.test.ts  websocket.test.ts
apps/web/src/test/: handlers.ts  setup.ts
apps/web/src/test-utils/: index.tsx
apps/web/src/types/: i18next.d.ts
documentacion/: AUDITORIA_REPOSITORIO.md  CLEANUP_SUMMARY.md  DEPENDENCIAS.md  I18N_GUIDE.md  MCP_INTEGRATION.md  README.md  TESTING_GUIDE.md  UX_UI_PROPOSAL.md  VERCEL_ENVIRONMENT_VARIABLES.md  documento_contexto.md  documento_implementacion.md  documento_skills.md  documento_tareas_checklist.md  vozazi_arquitectura_tecnica_completa.md
infrastructure/postgres/: init.sql
scripts/: cleanup-md.bat
